# stereokit-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
src/: bounds.rs  color_named.rs  constants.rs  enums.rs  font.rs  functions.rs  hierarchy.rs  info.rs  input.rs  lib.rs  lifecycle.rs  lines.rs  macros.rs  main.rs  material.rs  mesh.rs  microphone.rs  model.rs  named_colors.rs  physics.rs  pose.rs  render.rs  richtext.rs  shader.rs  sound.rs  sprite.rs  structs.rs  tests.rs  text.rs  textstyle.rs  texture.rs  time.rs  values.rs  world.rs
src/high_level/: collider.rs  math_traits.rs  mod.rs  model.rs  text.rs
src/ui/: layout.rs  mod.rs  text.rs  ui.rs  window.rs
stereokit/: Cargo.toml
stereokit-sys/: Cargo.toml  README.md  build.rs
stereokit-sys/examples/: cube.rs
stereokit-sys/src/: lib.rs  static-wrapper.h
stereokit/examples/: cube.rs
stereokit/src/: lib.rs  tests.rs
