[package]
name = "stereokit"
version = "0.16.1"
edition = "2021"
description = "Higher-Level wrapper around stereokit-sys bindings for StereoKitC library for XR"
homepage = "https://stereokit.net/"
keywords = ["stereokit", "XR", "VR", "AR"]
license = "MIT"
repository = "https://github.com/MalekiRe/stereokit-rs"

[features]
default = []
physics = ["stereokit-sys/physics"]
linux-egl = ["stereokit-sys/linux-egl"]

[dependencies]
stereokit-sys = "2.5.3"
thiserror = "1.0.40"
glam = "0.23.0"
bitflags = "1.3.2"
concat-idents = "1.1.4"

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1.1"
