[package]
name = "stereokit"
version = "0.16.7"
edition = "2021"
description = "Higher-Level wrapper around stereokit-sys bindings for StereoKitC library for XR"
homepage = "https://stereokit.net/"
keywords = ["stereokit", "XR", "VR", "AR"]
license = "MIT"
repository = "https://github.com/MalekiRe/stereokit-rs"

[features]
default = []
physics = ["stereokit-sys/physics"]
linux-egl = ["stereokit-sys/linux-egl"]

[dependencies]
stereokit-sys = "2.5.3"
thiserror = "1.0.40"
glam = { version = "0.23.0", features = ["serde"] }
bitflags = "1.3.2"
concat-idents = "1.1.4"
serde = { version = "1.0.160", features = ["serde_derive"] }
serde_repr = "0.1.12"
num_enum = "0.6.1"

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1.1"
