[package]
name = "stereokit"
version = "0.16.9"
edition = "2021"
description = "Higher-Level wrapper around stereokit-sys bindings for StereoKitC library for XR"
homepage = "https://stereokit.net/"
keywords = ["stereokit", "XR", "VR", "AR"]
license = "MIT"
repository = "https://github.com/MalekiRe/stereokit-rs"

[features]
default = ["auto-hash-id-location"]
physics = ["stereokit-sys/physics"]
linux-egl = ["stereokit-sys/linux-egl"]
bevy_ecs = ["stereokit-sys/bevy_ecs", "dep:bevy_ecs"]
bevy_reflect = ["stereokit-sys/bevy_reflect", "dep:bevy_reflect"]
auto-hash-id-location = []

[dependencies]
stereokit-sys = { path = "../stereokit-sys2", features = ["serde"]}
thiserror = "1.0.40"
glam = { version = "0.23.0", features = ["serde"] }
bitflags = "1.3.2"
concat-idents = "1.1.4"
serde = { version = "1.0.164", features = ["serde_derive"] }
serde_repr = "0.1.12"
num_enum = "0.6.1"
bevy_ecs = { version = "0.10.1", optional = true }
bevy_reflect = { version = "0.10.1", optional = true }


[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1.1"
